<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="40dip">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:src="@drawable/glogo"></ImageView>
        <TextView
            android:id="@+id/title_info"
            android:text="@string/event_details"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dip"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dip"
            style="@style/TitleInfoText" />
        <ProgressBar
            android:id="@+id/pbTitle"
            android:layout_toLeftOf="@id/title_info"
            android:visibility="gone"
            android:layout_margin="4dip"
            android:layout_width="24dip"
            android:layout_height="24dip"></ProgressBar>
    </RelativeLayout>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/lblName"
                android:text="@string/name"
                style="@style/EventInfo"></TextView>
            <TextView
                android:id="@+id/tvName"
                android:layout_below="@id/lblName"
                style="@style/EventName"></TextView>
            <TextView
                android:id="@+id/lblTime"
                android:text="@string/time"
                android:layout_below="@id/tvName"
                style="@style/EventInfo"></TextView>
            <TextView
                android:id="@+id/lblTimeFrom"
                android:text="@string/from"
                android:layout_below="@id/lblTime"
                android:layout_alignParentLeft="true"
                style="@style/EventLabel"></TextView>
            <TextView
                android:id="@+id/tvTimeFrom"
                android:layout_below="@id/lblTime"
                android:layout_toRightOf="@id/lblTimeFrom"
                style="@style/EventData"></TextView>
            <TextView
                android:id="@+id/lblTimeTo"
                android:text="@string/to"
                android:layout_below="@id/lblTimeFrom"
                android:layout_alignParentLeft="true"
                style="@style/EventLabel"></TextView>
            <TextView
                android:id="@+id/tvTimeTo"
                android:layout_below="@id/tvTimeFrom"
                android:layout_toRightOf="@id/lblTimeTo"
                style="@style/EventData"></TextView>
            <TextView
                android:id="@+id/lblVenue"
                android:text="@string/venue"
                android:layout_below="@id/tvTimeTo"
                style="@style/EventInfo"></TextView>
            <TextView
                android:id="@+id/lblVenueName"
                android:text="@string/name_lbl"
                android:layout_below="@id/lblVenue"
                android:layout_alignParentLeft="true"
                style="@style/EventLabel"></TextView>
            <TextView
                android:id="@+id/tvVenueName"
                android:text="@string/name"
                android:layout_below="@id/lblVenue"
                android:layout_toRightOf="@id/lblVenueName"
                style="@style/EventData"></TextView>
            <TextView
                android:id="@+id/lblVenueAddress"
                android:text="@string/address"
                android:layout_below="@id/tvVenueName"
                android:layout_alignParentLeft="true"
                style="@style/EventLabel"></TextView>
            <TextView
                android:id="@+id/tvVenueAddress"
                android:autoLink="map"
                android:layout_below="@id/tvVenueName"
                android:layout_toRightOf="@id/lblVenueAddress"
                style="@style/EventData"></TextView>
            <TextView
                android:id="@+id/lblVenueCity"
                android:text="@string/city"
                android:layout_below="@id/lblVenueAddress"
                android:layout_alignParentLeft="true"
                style="@style/EventLabel"></TextView>
            <TextView
                android:id="@+id/tvVenueCity"
                android:layout_toRightOf="@id/lblVenueCity"
                android:layout_below="@id/tvVenueAddress"
                style="@style/EventData"></TextView>
            <TextView
                android:id="@+id/lblDescription"
                android:layout_below="@id/tvVenueCity"
                android:text="@string/description"
                style="@style/EventInfo"></TextView>
            <TextView
                android:id="@+id/tvDescription"
                android:autoLink="all"
                android:layout_below="@id/lblDescription"
                style="@style/EventDesc"></TextView>
            <TextView
                android:id="@+id/lblURL"
                android:layout_below="@id/tvDescription"
                android:text="@string/URL"
                style="@style/EventInfo"></TextView>
            <TextView
                android:id="@+id/tvURL"
                android:autoLink="web"
                android:layout_below="@id/lblURL"
                style="@style/EventData"></TextView>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>