<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:id="@+id/search_box"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:hint="@string/enter_keywords"
            android:id="@+id/keywords"
            android:layout_weight="0.2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:inputType="text" android:imeOptions="actionSearch"></EditText>
        <Button
            android:id="@+id/btnSearch"
            android:text="@string/go"
            android:layout_weight="0.8"
            android:onClick="onSearchClick"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"></Button>
    </LinearLayout>
    <ListView
        android:id="@+id/events_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/search_box"
        android:cacheColorHint="#00000000">
    </ListView>
    <TextView
        android:id="@+id/no_events"
        android:textSize="28sp"
        android:text="@string/no_events"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_centerInParent="true" />
</RelativeLayout>
