<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#fff"
        android:id="@+id/tvTitle"
        android:text="@string/near_by"
        android:layout_marginTop="4dip"
        android:layout_marginLeft="6dip" />
    <ListView
        android:id="@+id/events_list"
        android:layout_marginTop="40dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/events_location"
        android:cacheColorHint="#00000000">
    </ListView>
    <TextView
        android:id="@+id/no_events"
        android:textSize="18sp"
        android:text="@string/no_events"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true" />
    <TextView
        android:id="@+id/events_location"
        android:textSize="16sp"
        android:text="@string/events_location"
        android:layout_height="40dip"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="5dip"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/pbFindLocation"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/events_location"
        android:layout_marginBottom="5dip"
        android:indeterminate="true"
        android:layout_height="30dip"
        android:layout_width="30dip"></ProgressBar>
</RelativeLayout>
