<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="40dip">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:src="@drawable/glogo"></ImageView>
        <TextView
            android:id="@+id/title_info"
            android:text="@string/title"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dip"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dip"
            style="@style/TitleInfoText" />
        <ProgressBar
            android:id="@+id/pbTitle"
            android:layout_toLeftOf="@id/title_info"
            android:visibility="gone"
            android:layout_margin="4dip"
            android:layout_width="24dip"
            android:layout_height="24dip"></ProgressBar>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tabs"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dip">
        <ToggleButton
            android:id="@+id/tbNearby"
            android:onClick="onChangeView"
            style="@style/NearbyButton"
            android:checked="true"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" />
        <ToggleButton
            android:id="@+id/tbBrowse"
            android:onClick="onChangeView"
            style="@style/BrowseButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" />
        <ToggleButton
            android:id="@+id/tbSearch"
            android:onClick="onChangeView"
            style="@style/SearchButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" />
    </LinearLayout>
    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="4dip"
            android:src="@drawable/btn_tab_on"></ImageView>
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:id="@+id/search_box"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:hint="@string/enter_keywords"
                android:id="@+id/keywords"
                android:layout_weight="0.2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_margin="2dip"
                android:imeOptions="actionSearch"></EditText>
            <Button
                android:id="@+id/btnSearch"
                android:text="@string/go"
                android:layout_weight="0.8"
                android:onClick="onSearchClick"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"></Button>
        </LinearLayout>
        <ListView
            android:id="@+id/events_list"
            android:layout_below="@id/search_box"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/events_location"
            android:cacheColorHint="#00000000">
        </ListView>
        <ListView
            android:id="@+id/categories_list"
            android:layout_below="@id/search_box"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone"
            android:layout_above="@+id/events_location"
            android:cacheColorHint="#00000000">
        </ListView>
        <TextView
            android:id="@+id/events_location"
            android:textSize="14sp"
            android:text="@string/events_location"
            android:layout_height="32dip"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="5dip"
            android:layout_centerHorizontal="true"
            android:gravity="center" />
        <ProgressBar
            android:id="@+id/pbFindLocation"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/events_location"
            android:layout_marginBottom="5dip"
            android:indeterminate="true"
            android:layout_height="24dip"
            android:layout_width="24dip"></ProgressBar>
    </RelativeLayout>
    <!--
        <ImageView android:src="@drawable/upcoming_logo1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" android:layout_weight="0"
        android:id="@+id/ivUpcoming"
        android:layout_centerHorizontal="true"></ImageView>
    -->
</LinearLayout>